# mart-project

./: ReadMe.md  compose.yaml  compose.yml
order_service/: Dockerfile.dev
order_service/app/: crud.py  kafka_consumer.py  kafka_producer.py  main.py  models.py
payment_service/: .env  Dockerfile  pyproject.toml
payment_service/app/: crud.py  db.py  main.py  models.py  routes.py  schemas.py  settings.py
product_service/: Dockerfile.dev  pyproject.toml
product_service/app/: crud.py  crudImage.py  db.py  image_routes.py  kafka.py  main.py  product.proto  route.py  settings.py
user_service/: .env  Dockerfile  Dockerfile.dev  pyproject.toml
user_service/app/: auth.py  crud.py  db.py  main.py  models.py  settings.py  user.proto
